examples/test/testpolicy13212.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13212
  namespace: namespace229
spec:
  podSelector:
    matchLabels:
      key1: value42
      key44: value35
      key42: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value46
          key27: value1
          key20: value15
      podSelector:
        matchLabels:
          key7: value42
